--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@material-ui/core": "4.2.0",
-    "mui": "^0.0.1"
+    "mui": "^0.0.1",
+    "react-scroll": "^1.8.4"
   }
 }
